--- a/symphony/assets/admin.css
+++ b/symphony/assets/admin.css
@@ -26,13 +26,14 @@ h1 a:hover,
 	clear: both;
 	float: right;
 	position: relative;
-	margin: 1.3em 1.3em 0 0;
+	margin: 1.5em 15px 0 0;
 	width: auto;
 	z-index: 2;
 }
 #datasource_template_switch + h2 {
 	clear: none;
 	z-index: 1;
+	margin: 2.5em 15px 0;
 }
 
 /* Navigation */
@@ -41,10 +42,9 @@ h1 a:hover,
 	position: relative;
 	float: left;
 	width: 100%;
+	margin: 0;
 	white-space: nowrap;
 	list-style: none;
-	line-height: 18px;
-	margin: 0 0 1em 0;
 	background: -webkit-gradient(linear, left top, left bottom, from(#f4f4f4), to(#d8d8d8), color-stop(0.04, #ededed));
 	background: -moz-linear-gradient(top center, #f4f4f4 0%, #ededed 1%, #d8d8d8 100%);
 	-webkit-box-shadow: 0 1px 3px #888;
@@ -55,22 +55,14 @@ h1 a:hover,
 	color: #666;
 	position:relative;
 	float: left;
-	padding: 7px 1.3em;
+	padding: 0 1.3em;
+	line-height: 32px;
 	cursor: pointer;
 	font-weight: bold;
 }
 
 #nav #nav-system, #nav #nav-blueprints, #nav #nav-expand {
 	float: right;
-	background-position: 0;
-}
-
-#nav #nav-expand {
-	margin: .55em .95em;
-	padding: .15em .55em;
-	-moz-border-radius: 1em;
-	-webkit-border-radius: 1em;
-	border-radius: 1em;
 }
 
 #nav li.active {
@@ -83,11 +75,6 @@ h1 a:hover,
 	color: #fff;
 	background: -webkit-gradient(linear, left top, left bottom, from(#666), to(#444), color-stop(0.02, #555));
 	background: -moz-linear-gradient(top center, #666 0%, #555 1%, #444 100%);
-}
-
-#nav > li#nav-expand:hover {
-	background: #aaa;
-	color: #fff;
 }
 
 #nav a {
@@ -121,9 +108,22 @@ h1 a:hover,
 }
 
 #nav ul li {
+	padding: 0;
 	font-weight: normal;
 	background: none;
 	text-shadow: none;
+}
+
+#nav > li#nav-expand {
+	text-indent: -1000em;
+	background: url('images/expand.png') 0 50% no-repeat;
+	padding: 0;
+	width: 38px;
+}
+
+#nav > li#nav-expand:hover {
+	background-color: #aaa;
+	color: #fff;
 }
 
 #nav #nav-system ul, #nav #nav-blueprints ul {
@@ -136,12 +136,11 @@ h1 a:hover,
 
 #nav ul li {
 	width: 12em;
-	padding: 0;
 }
 
 #nav ul li a {
 	display: block;
-	padding: .75em 1.3em;
+	padding: 0 1em;
 }
 
 #nav ul li:last-child a {
@@ -157,9 +156,8 @@ h1 a:hover,
 #nav.expanded {padding-bottom: .5em;}
 #nav.expanded li {width:11em;font-weight:bold;cursor:default;}
 #nav.expanded #nav-expand {
-	width: auto;
-	margin: .55em .9em;
-	padding: .15em .8em;
+	background: url('images/expand.png') 100% 50% no-repeat;
+	cursor: pointer;
 	}
 #nav.expanded li ul li {font-weight:normal;}
 
@@ -174,7 +172,7 @@ h1 a:hover,
     background-color: transparent;
 }
 
-#nav.expanded ul li a {padding: 0;color: #888;}
+#nav.expanded ul li a {padding: 0;color: #888;line-height: 2em;}
 #nav.expanded ul li a:hover {color: #333;}
 
 /* Session */
@@ -309,27 +307,34 @@ pre code {
 
 /* Buttons */
 a.button {
-	background-color: #597bc6;
 	color: #fff;
-	float:right;
-	padding: .15em .5em;
-	margin: 0;
-	line-height: 2em;
-	height: 2em;
-	font-size: .7em;
+	font-size: 11px;
 	text-decoration: none;
-	text-shadow: none;
+	float: right;
+	text-shadow: 0 2px 1px #455e96;
+	border: none;
+	padding: 4px 7px 6px;
+	background: -webkit-gradient(linear, left top, left bottom, from(#7190d4), to(#4f72be));
+	background: -moz-linear-gradient(top center, #7190d4 0%, #4f72be 100%);
 	cursor: pointer;
-	border-radius: .5em;
-	-moz-border-radius: .5em;
-	-webkit-border-radius: .5em;
+	-moz-border-radius: 0.5em;
+	-webkit-border-radius: 0.5em;
+}
+div.actions input:hover {
+	background: -webkit-gradient(linear, left top, left bottom, from(#555), to(#222));
+	background: -moz-linear-gradient(top center, #555 0%, #222 1%);
+}
+a.create {
+	text-shadow: 0 1px 2px #67902f;
+	background: -webkit-gradient(linear, left top, left bottom, from(#8ecb3a), to(#7fbb2b));
+	background: -moz-linear-gradient(top center, #8ecb3a 0%, #7fbb2b 100%);
+	background-color: #81b934;
 }
 a.button:hover,
 a.button.active {
-	background-color: #121212;
-}
-a.create {
-	background-color: #81b934;
+	text-shadow: 0 1px 2px #111;
+	background: -webkit-gradient(linear, left top, left bottom, from(#444), to(#222));
+	background: -moz-linear-gradient(top center, #444 0%, #222 100%);
 }
 #session .button {
 	float:left;
@@ -340,14 +345,16 @@ a.create {
 	
 /* View Options */
 #view-options {
-	float: left;
+	position: relative;
+	top: -0.6em;
+	display: inline-table;
 	width: 100%;
-	margin: .5em 0 1em;
+	margin: .5em 0 0;
 	padding: 0 1.3em 0;
 	line-height: 2.4em;
 	font-size: 1em;
 	list-style: none;
-	background: transparent url('images/shadows.png') 0 -10.7em repeat-x;
+	background: #fff url('images/shadows.png') 0 -10.7em repeat-x;
 	color: #777;
 }
 
@@ -360,6 +367,7 @@ a.create {
 }
 
 #view-options li a {
+	color: #444;
 	display: block;
 	float: left;
 	padding: 0 1em;
