--- a/symphony/assets/login.css
+++ b/symphony/assets/login.css
@@ -10,6 +10,7 @@ form {
 	width: 25em;
 	background: -webkit-gradient(linear, left top, left bottom, from(#f4f4f4), to(#d8d8d8), color-stop(0.04, #ededed));
 	background: -moz-linear-gradient(top center, #f4f4f4 0%, #ededed 1%, #d8d8d8 100%);
+	background-color: #d8d8d8;
 	-webkit-box-shadow: 0 1px 3px #888;
 	-moz-box-shadow: 0 1px 3px #888;
 	-moz-border-radius: 0.5em;
@@ -37,9 +38,10 @@ div.actions input {
 	font-weight: bold;
 	text-shadow: 1px 1px 2px #333;
 	border: none;
-	padding: 0.5em 1em 0.7em;
+	padding: 0.5em 1em;
 	background: -webkit-gradient(linear, left top, left bottom, from(#777), to(#444));
 	background: -moz-linear-gradient(top center, #777 0%, #444 100%);
+	background-color: #444;
 	-webkit-box-shadow: 0 1px 2px #777;
 	-moz-box-shadow: 0 1px 2px #777;
 	-moz-border-radius: 0.3em;
