--- a/symphony/assets/tables.css
+++ b/symphony/assets/tables.css
@@ -22,7 +22,7 @@ td {
 }
 th:first-child,
 td:first-child {
-	padding-left: 1.3em;
+	padding-left: 20px;
 }
 tr.odd td {
 	background-color: #f5f5f4;
