Revert "added margins to ends of the nav bar"
This reverts commit 7cceb9c12858f03c15dabe6faa4ccdadbed78c94.

--- a/symphony/assets/tables.css
+++ b/symphony/assets/tables.css
@@ -22,7 +22,7 @@ td {
 }
 th:first-child,
 td:first-child {
-	padding-left: 20px;
+	padding-left: 1.3em;
 }
 tr.odd td {
 	background-color: #f5f5f4;
