hide select option for 'add item' when there is only one option

--- a/symphony/assets/symphony.duplicator.css
+++ b/symphony/assets/symphony.duplicator.css
@@ -104,6 +104,9 @@
 		min-width: 15em;
 		width: auto;
 	}
+	.duplicator > .controls > select.disabled {
+		display: none;
+	}
 	.duplicator > .controls > a {
 		color: #fff;
 		cursor: pointer;
