--- a/symphony/assets/basic.css
+++ b/symphony/assets/basic.css
@@ -1,7 +1,7 @@
 /* Basic Styles */
-
-html {font-size:62.5%;}
-
+html {
+	font-size: 62.5%;
+}
 body {
 	background: #fff;
 	color: #222;
@@ -44,7 +44,9 @@ ul,
 ol {
 	margin: 0 0 1.5em 2.25em;
 }
-dt {font-weight:bold;}
+dt {
+	font-weight: bold;
+}
 code {
 	font: 110%/1.5 Monaco, Consolas, 'Andale Mono', monospace;
 	font-size-adjust: 0.5;
