--- a/symphony/assets/symphony.roles.css
+++ b/symphony/assets/symphony.roles.css
@@ -1,43 +1,3 @@
-table.role-permissions {
-	text-align: center;
-	width: 100%;
-	margin-bottom: 2em;
-	border: 1px solid #ddd;
-	padding: 0;
-} 
-table.narrow {
-	width: 30%;
-}
-table.role-permissions th:first-child {
-	text-align: left;
-}
-table.role-permissions th {
-	background-color: #d6d4c8;
-	padding: 5px
-}
-table.role-permissions tr td {
-	background-color: #f5f5f5;
-	padding: 5px;
-}
-table.role-permissions tr.odd td {
-	background-color: #fff;
-}
-table.role-permissions td:first-child {
-	text-align: left;
-}
-table.role-permissions td.add {
-	width: 50px;
-}
-table.role-permissions tr.selected td {
-	color: #222;
-}
-table.role-permissions tr.selected.odd td {
-	background-color: #fff !important;
-}
-table.role-permissions tr.selected td {
-	background-color: #f5f5f3 !important;
-}
- 
 /* Slider */
 table.role-permissions .edit, table.role-permissions .delete {
 	width: 325px;
@@ -51,17 +11,16 @@ table.role-permissions td span {
 	float: right;
 	width: 95px;
 	text-align: right;
-	font-weight: bold;
-	color: #C6C4B8;
+	color: #aaa;
 } 
 table.role-permissions td span.perm-0 {
-	color:#C6C4B8;
+	color:#aaa;
 }
 table.role-permissions td span.perm-1 {
-	color:#868478;
+	color:#888;
 }
 table.role-permissions td span.perm-2 {
-	color:#464438;
+	color:#666;
 }
  
 /* Role Operations */
