Finished view table collapsing.

--- a/symphony/assets/admin.css
+++ b/symphony/assets/admin.css
@@ -290,6 +290,7 @@ a.create {
 	background: -moz-linear-gradient(top center, #8ecb3a 0%, #7fbb2b 100%);
 	background-color: #81b934;
 }
+.selected a.button,
 a.button:hover,
 a.button.active {
 	text-shadow: 0 1px 2px #111;
