--- a/symphony/assets/symphony.css
+++ b/symphony/assets/symphony.css
@@ -4,6 +4,7 @@
 		box-sizing: border-box;
 		-moz-box-sizing: border-box;
 		-webkit-box-sizing: border-box;
+		cursor: default;
 		font-family: inherit;
 		font-size: inherit;
 		font-style: inherit;
@@ -13,7 +14,16 @@
 		padding: 0;
 	}
 	a {
+		color: #5072bf;
+		cursor: pointer;
 		outline: none;
+		text-decoration: underline;
+	}
+	a:hover {
+		color: #000;
+	}
+	a:active {
+		color: #d42;
 	}
 	img {
 		border: none;
@@ -66,9 +76,9 @@
 				margin: 0 0 0 10px;
 			}
 			#session li a {
-				border-radius: 3px;
-				-moz-border-radius: 3px;
-				-webkit-border-radius: 3px;
+				border-radius: 5px;
+				-moz-border-radius: 5px;
+				-webkit-border-radius: 5px;
 				display: inline-block;
 				line-height: 15px;
 				padding: 5px;
@@ -92,12 +102,10 @@
 					hsla(0, 0%, 0%, 0.2) 33px,
 					hsla(0, 0%, 0%, 0)
 				);
-				left: 0;
+				height: 35px;
 				list-style: none;
-				padding: 0 10px 3px 10px;
-				position: absolute;
-				right: 0;
-				top: 60px;
+				margin: 0 0 -3px 0;
+				padding: 0 10px;
 				white-space: nowrap;
 			}
 			#nav > li {
@@ -124,6 +132,7 @@
 					hsla(215, 40%, 50%, 1)
 				);
 				color: #ffffff;
+				text-shadow: 1px 1px 0 hsla(0, 0%, 0%, 0.5);
 			}
 			#nav > li:hover {
 				color: #ffffff;
@@ -134,6 +143,7 @@
 					hsla(0, 0%, 35%, 1) 1px,
 					hsla(0, 0%, 25%, 1)
 				);
+				text-shadow: 1px 1px 0 hsla(0, 0%, 0%, 0.5);
 			}
 			
 			/* @group Sub Navigation */
@@ -184,12 +194,156 @@
 				
 			/* @end */
 			
-			#nav + *,
-			#nav ~ * {
+		/* @end */
+		
+	/* @end */
+	
+	/* @group Content */
+		
+		h2 {
+			font-size: 12pt;
+			margin: 20px;
+		}
+		
+		/* @group Buttons */
+			
+			.button {
+				background: -moz-linear-gradient(
+					top,
+					hsla(215, 40%, 60%, 1),
+					hsla(215, 40%, 50%, 1)
+				);
+				border: none;
+				border-radius: 5px;
+				-moz-border-radius: 5px;
+				-webkit-border-radius: 5px;
+				color: #ffffff;
+				display: inline;
+				float: right;
+				font-size: 9pt;
+				padding: 4px 7px;
+				text-decoration: none;
+				text-shadow: 1px 1px 0 hsla(0, 0%, 0%, 0.5);
+				white-space: nowrap;
+			}
+			.button.create {
+				background: -moz-linear-gradient(
+					top,
+					hsla(85, 50%, 60%, 1),
+					hsla(85, 50%, 50%, 1)
+				);
+			}
+			.button:hover {
+				background: -moz-linear-gradient(
+					top,
+					hsla(0, 0%, 30%, 1),
+					hsla(0, 0%, 20%, 1)
+				);
+				color: #ffffff;
+			}
+			
+		/* @end */
+		
+		/* @group Tables */
+			
+			table {
+				border-spacing: 0;
+				table-layout: fixed;
+				width: 100%;
+			}
+			table thead tr th {
+				padding: 0 10px 6px 10px;
+			}
+			table tbody tr td {
+				padding: 6px 10px;
+			}
+			table th:first-child,
+			table td:first-child {
+				padding-left: 20px;
+				width: 20%;
+			}
+			table th:last-child,
+			table td:last-child {
+				padding-right: 20px;
+			}
+			table thead tr th,
+			table tbody tr td {
+				border-bottom: 1px solid hsla(0, 0%, 0%, 0.1);
+				text-align: left;
+			}
+			table tbody tr td {
+				background: -moz-linear-gradient(
+					top,
+					hsla(0, 0%, 0%, 0.01),
+					hsla(0, 0%, 0%, 0),
+					hsla(0, 0%, 0%, 0.01)
+				);
+			}
+			table tbody tr:nth-child(even) td {
+				background: -moz-linear-gradient(
+					top,
+					hsla(0, 0%, 0%, 0.03),
+					hsla(0, 0%, 0%, 0.02),
+					hsla(0, 0%, 0%, 0.03)
+				);
+			}
+			table tbody tr td.inactive {
+				color: hsla(0, 0%, 0%, 0.3);
+			}
+			table tbody tr td input {
 				display: none;
 			}
 			
 		/* @end */
+		
+		/* @group Actions */
+			
+			.actions {
+				margin: 20px;
+				text-align: right;
+			}
+			.actions input {
+				float: none;
+			}
+			
+		/* @end */
+		
+	/* @end */
+	
+	/* @group Views List */
+		
+		#views-list td.toggle {
+			padding-left: 3.3em;
+		}
+		#views-list td.toggle a.hide,
+		#views-list td.toggle a.show {
+			display: inline-block;
+			left: 0;
+			line-height: 1;
+			margin: -0.5em 0 -0.5em -2.3em;
+			padding: 0.5em 0;
+			text-align: center;
+			text-decoration: none;
+			width: 2em;
+		}
+		#views-list td.toggle a.hide:hover,
+		#views-list td.toggle a.show:hover {
+			background: hsla(0, 0%, 0%, 0.1);
+			border-radius: 0.5em;
+			-moz-border-radius: 0.5em;
+			-webkit-border-radius: 0.5em;
+		}
+		#views-list td.toggle span {
+			color: #888877;
+			display: inline-block;
+			-moz-transform: matrix(-1, 0, 0, 1, 0, 0);
+			-webkit-transform: matrix(-1, 0, 0, 1, 0, 0);
+			-o-transform:matrix(-1, 0, 0, 1, 0, 0);
+			font-size: 7pt;
+		}
+		#views-list .selected td.toggle span {
+			color: #aabbee;
+		}
 		
 	/* @end */
 	
